objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>Annual_Fee_Calc__c</fullName>
        <formula>Annual_Fees_Rollup_Bundle__c + Annual_Rollup_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Fee Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Fee_Display__c</fullName>
        <formula>IF( OR(CCB_Lease_Rollup_Check__c, CCB_Purchase_Rollup_Check__c ) , null, IF( (Annual_Fees_Rollup_Bundle__c &gt;0), Annual_Fee_Calc__c , Annual_Rollup_Sum__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Fee Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Fee__c</fullName>
        <formula>SBQQ__NetPrice__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Fees_Rollup_Bundle__c</fullName>
        <label>Annual Fees Rollup Bundle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Fees_Rollup__c</fullName>
        <label>Annual Fees Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Rollup_Sum__c</fullName>
        <formula>Annual_Fee__c + Annual_Fees_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Rollup Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Quote_Section__c</fullName>
        <label>Bundle Quote Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCB_Lease_Rollup_Check__c</fullName>
        <formula>SBQQ__ProductOption__r.CCB_Lease_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCB Lease Rollup Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCB_Purchase_Rollup_Check__c</fullName>
        <formula>SBQQ__ProductOption__r.CCB_Purchase_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCB Purchase Rollup Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delayed_Launch_Date__c</fullName>
        <label>Delayed Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_Not_Launch_Date__c</fullName>
        <inlineHelpText>Records the date when a Did Not Launch was executed</inlineHelpText>
        <label>Did Not Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_List_Total__c</fullName>
        <formula>IF(OR(AND(RollupCheck__c, SBQQ__Quote__r.CCB_Product_Count__c ==0, Text(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Lease&apos;),AND(CCB_Lease_Rollup_Check__c, SBQQ__Quote__r.CCB_Product_Count__c &gt;0, Text(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Lease&apos;),AND(CCB_Purchase_Rollup_Check__c, SBQQ__Quote__r.CCB_Product_Count__c&gt;0, Text(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Purchase&apos;)) ,null, IF( List_Total_Rollup__c&gt;0.0 ,List_Total_Rollup__c+Per_Month_Price__c, Per_Month_Price__c ))</formula>
        <label>Display List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Total__c</fullName>
        <formula>IF(OR(AND(RollupCheck__c,TEXT(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Lease&apos;,SBQQ__Quote__r.CCB_Product_Count__c==0),AND(CCB_Lease_Rollup_Check__c,SBQQ__Quote__r.CCB_Product_Count__c &gt;0,Text( SBQQ__Quote__r.L2O_Sales_Type__c )==&apos;Lease&apos;), AND(CCB_Purchase_Rollup_Check__c, SBQQ__Quote__r.CCB_Product_Count__c &gt;0, Text(SBQQ__Quote__r.L2O_Sales_Type__c)==&apos;Purchase&apos; )) ,null, Extended_Price_Calc__c )</formula>
        <label>Display Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <formula>SBQQ__Product__r.Equipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Price_Bundle__c</fullName>
        <label>Extended Price Bundle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Price_Calc__c</fullName>
        <formula>Extended_Rollup_Sum__c + Extended_Price_Bundle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Rollup_Sum__c</fullName>
        <formula>Total_Rollup_Numeric__c + SBQQ__NetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Rollup Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Additional_Discount_Unit__c</fullName>
        <description>Defines how the user wants to add in the discount</description>
        <label>Additional Discount Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Admin_Fee_Default__c</fullName>
        <label>Admin Fee Default</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Admin_Fee__c</fullName>
        <description>Captures the administrative fees</description>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Adolescent_Population__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adolescent (13-17) Population</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up field to the Quote Agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Anchor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Approval_For_Client_Tech_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to decide if Client &amp; Tech Ops approval required or not</description>
        <label>Approval For Client &amp; Tech Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field gives the indication if Approval is required for the Quote Line.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_At_Risk_Fee_Default__c</fullName>
        <label>At Risk Fee Default</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_At_Risk_PPPM__c</fullName>
        <label>At Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Attainment_Rate_Override__c</fullName>
        <description>Pulls in the from Product Pg percentages</description>
        <label>Attainment Rate Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Available_For_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Products on Quote available for lease</description>
        <label>Available For Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Bundle_Type__c</fullName>
        <description>Type of Products bundle</description>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Bundle_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Business_Region__c</fullName>
        <description>Pulled from the Address on the Quote</description>
        <formula>SBQQ__Quote__r.L2O_Business_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Business_Region_rev__c</fullName>
        <label>Business Region_rev</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Business_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Case_Rate__c</fullName>
        <label>Case Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Configured_Package_Product_Code__c</fullName>
        <formula>IF(AND(
NOT(ISBLANK(SBQQ__PackageProductCode__c)),SBQQ__PackageProductCode__c  &lt;&gt; &quot;PRIM360&quot;), 
SBQQ__PackageProductCode__c ,

IF(AND(
ISBLANK(SBQQ__PackageProductCode__c), 
NOT(ISBLANK(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c)), 
SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c  &lt;&gt; &quot;PRIM360&quot;),  
SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c, 

IF(AND(
ISBLANK(SBQQ__PackageProductCode__c), 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c), 
NOT(ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c)), SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c  &lt;&gt; &quot;PRIM360&quot;), 
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c,  

IF(AND(
ISBLANK(SBQQ__PackageProductCode__c), 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c), 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c), 
NOT(ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c )),
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c  &lt;&gt; &quot;PRIM360&quot;), 
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c,  

IF(AND(
OR(SBQQ__ProductCode__c = &quot;PRIM360CARE&quot;, SBQQ__ProductCode__c = &quot;PRIM360CARE-BUNDLE&quot;),
NOT(ISPICKVAL(L2O_Fee_Type__c , &quot;PPPM&quot;)),SBQQ__PackageProductCode__c = &quot;PRIM360&quot;), &quot;PRIM360WPOP&quot;,

IF(AND(
OR(SBQQ__ProductCode__c = &quot;PRIM360CARE&quot;, SBQQ__ProductCode__c = &quot;PRIM360CARE-BUNDLE&quot;),
ISPICKVAL(L2O_Fee_Type__c , &quot;PPPM&quot;),SBQQ__PackageProductCode__c = &quot;PRIM360&quot;), &quot;PRIM360PPPM&quot;,

IF(AND( 
OR(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;), 
OR(ISPICKVAL(SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PEPM&quot;),
ISPICKVAL(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PEPM&quot;), ISPICKVAL(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PEPM&quot;))), 
&quot;PRIM360WPOP&quot;,

IF(AND(
OR(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;), 
OR(ISPICKVAL(SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PMPM&quot;), 
ISPICKVAL( SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PMPM&quot;), ISPICKVAL(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PMPM&quot;))),
&quot;PRIM360WPOP&quot;,

IF(AND(
OR(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;), 
OR(ISPICKVAL(SBQQ__RequiredBy__r.L2O_Fee_Type__c ,&quot;PPPM&quot;),
ISPICKVAL(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PPPM&quot;), ISPICKVAL(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.L2O_Fee_Type__c , &quot;PPPM&quot;))), 
&quot;PRIM360PPPM&quot;,


&quot;None&quot; ) ) ) ) ) ) ) ) )</formula>
        <label>Configuration Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Fee_Backup__c</fullName>
        <label>Consult Fee Backup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Fee__c</fullName>
        <description>Used when UGH Products are configured</description>
        <label>Consult Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type_Text__c</fullName>
        <description>To capture the value of Consult type Text and None if its blank.</description>
        <label>L2O Consult Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type__c</fullName>
        <description>Selection between Standard or Custom</description>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Action__c</fullName>
        <label>Contract Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Quantity Increase</fullName>
                </value>
                <value>
                    <fullName>Quantity Decrease</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Product Swap</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Product_Family__c</fullName>
        <label>Contract Product Family</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Customer_Account_Point__c</fullName>
        <label>Customer Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Enrollment_Percentage__c</fullName>
        <description>This field is used to set the default Enrollment Percentage for Livongo Products. It gets used in PriceRule to calculate the Quantity.</description>
        <label>Direct Enrollment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Expected_Visit_Revenue__c</fullName>
        <description>Value applied via Price Rules.</description>
        <label>Expected Visit Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Applied_To__c</fullName>
        <description>Describes the Product the fees apply to</description>
        <formula>SBQQ__RequiredBy__r.SBQQ__ProductName__c</formula>
        <label>Fee Applied To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Code_Formula__c</fullName>
        <formula>IF(ISBLANK(L2O_Fee_Code__c), &apos;NULL&apos; , L2O_Fee_Code__c)</formula>
        <label>Fee Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Code__c</fullName>
        <description>To capture the Fee code for various parent Product</description>
        <label>Fee Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Description__c</fullName>
        <description>To capture the Parent Product for which this fee is applied</description>
        <label>Fee Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Description</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type_Backup__c</fullName>
        <description>To capture the Fee Type selected before changing it on QLE.</description>
        <label>Fee Type Backup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type_Text__c</fullName>
        <description>To capture the Fee Type text value and None if it is blank.</description>
        <label>L2O Fee Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <description>To capture what time of fee was applied to the Products</description>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GM_HY_Initial_Utilization_Cap__c</fullName>
        <formula>IF( 
    AND( 
            SBQQ__EffectiveQuantity__c  &gt; 0, 
            OR( AND(SBQQ__ProductCode__c = &apos;GM&apos;, L2O_Parent_Product_Code__c &lt;&gt; &apos;PRIM360CARE&apos;) , SBQQ__ProductCode__c = &apos;HY-CMUSEMP-BUNDLE&apos;, SBQQ__ProductCode__c = &apos;HY-CMUSEMP-BUNDLE-2.0&apos;, SBQQ__ProductCode__c = &apos;HY-CMUSEMP-BUNDLE-3.0&apos;, SBQQ__ProductCode__c = &apos;HY-CRUSEMP-BUNDLE&apos; ) ,  
            OR( ISBLANK(L2O_Initial_Utilization_Cap__c),L2O_Initial_Utilization_Cap__c = 0), 
            ISPICKVAL( L2O_Consult_Type__c , &apos;Included&apos;) ) , 
    TRUE, 
    FALSE
    )</formula>
        <label>GM/HY Initial Utilization Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_GM_on_QL__c</fullName>
        <formula>IF(  AND( SBQQ__EffectiveQuantity__c &gt; 0,SBQQ__ProductCode__c =&apos;GM&apos; ) , 
     IF(   AND(OR( ISPICKVAL( L2O_Consult_Type__c , &apos;Standard&apos;) ,ISPICKVAL( L2O_Consult_Type__c , &apos;Custom&apos;)) , 
               SBQQ__Quote__r.L2O_Business_Region__c =&apos;Canada&apos; ) , 
          &apos;GM More than 1 &amp; GM Standard Canada&apos;, 
          &apos;GM More than 1&apos;) , 
     &apos;Approval Not Required&apos; )</formula>
        <label>GM on QL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Grandparent_Package_ProductCode__c</fullName>
        <formula>IF(NOT(ISBLANK(SBQQ__PackageProductCode__c)), SBQQ__PackageProductCode__c ,

IF( 
AND(
ISBLANK(SBQQ__PackageProductCode__c), 
NOT(ISBLANK(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c))),  
SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c, 

IF(
AND(
ISBLANK(SBQQ__PackageProductCode__c), 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c), 
NOT(ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c))), 
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c,  

IF(
AND(
ISBLANK(SBQQ__PackageProductCode__c), 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c), 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c), 
NOT(ISBLANK( SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c ))), 
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c,  


IF(
AND(  
SBQQ__ProductCode__c = &quot;GM&quot;, ISPICKVAL(L2O_Consult_Type__c , &quot;Custom&quot;), 
SBQQ__RequiredBy__r.SBQQ__PackageProductCode__c = &quot;PRIM360&quot;, ISPICKVAL(SBQQ__RequiredBy__r.L2O_Fee_Type__c, &quot;PPPM&quot;)), 
&quot;PRIM360PPPM&quot;,

&quot;None&quot;)))))</formula>
        <label>Grandparent Package ProductCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Grandparent_Product_Code__c</fullName>
        <formula>IF( ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__Product__r.ProductCode) , &apos;NULL&apos;, SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__Product__r.ProductCode)</formula>
        <label>Grandparent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Health_Plan_Enrollment_Percentage__c</fullName>
        <label>Health Plan Enrollment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Utilization_Cap_Override__c</fullName>
        <description>User can enter this field to override the default utilization rate</description>
        <label>Initial Utilization Cap Override</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Utilization_Cap__c</fullName>
        <description>User can enter this field to override the default utilization rate</description>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Quote_Line_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Line_Discounted_USGH__c</fullName>
        <formula>IF(  AND(  NOT( ISPICKVAL( L2O_Service_Platform__c , &apos;HHS&apos;))  , SBQQ__EffectiveQuantity__c  &gt; 0, 
            SBQQ__AdditionalDiscount__c  &gt; 0) , 
     TRUE, 
     FALSE)</formula>
        <label>Line Discounted - USGH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_MDQ_Product_Approvals__c</fullName>
        <formula>IF(TEXT(L2O_Fee_Type__c) = &apos;PPPM&apos;, 
    IF( OR(
            AND(
                OR(
                    AND(SBQQ__ProductCode__c =&apos;DIAB&apos;,
                        OR(L2O_Parent_Product_Code__c = &apos;NULL&apos;,L2O_Parent_Product_Code__c =&apos;DMSOL&apos;)
                        ),
                    AND(SBQQ__ProductCode__c =&apos;DIABP&apos;,L2O_Parent_Product_Code__c =&apos;DPSOL&apos;)
                    ), 
                    OR(
                        AND(SBQQ__SegmentIndex__c = 2,OR(L2O_Per_Unit_Discount__c &lt;&gt; -3,ISBLANK(L2O_Per_Unit_Discount__c))),
                        AND(SBQQ__SegmentIndex__c = 3,OR(L2O_Per_Unit_Discount__c &lt;&gt; -6,ISBLANK(L2O_Per_Unit_Discount__c))),
                        AND(SBQQ__SegmentIndex__c = 4,OR(L2O_Per_Unit_Discount__c &lt;&gt; -9,ISBLANK(L2O_Per_Unit_Discount__c))),
                        AND(SBQQ__SegmentIndex__c = 5,OR(L2O_Per_Unit_Discount__c &lt;&gt; -12,ISBLANK(L2O_Per_Unit_Discount__c)))
                        )
                ),
            AND(
                OR(
                    AND(
                        OR(SBQQ__ProductCode__c =&apos;DIABP&apos;,SBQQ__ProductCode__c =&apos;WEIGM&apos;,SBQQ__ProductCode__c =&apos;HYPT&apos;),L2O_Parent_Product_Code__c = &apos;NULL&apos;),
                    AND(SBQQ__ProductCode__c =&apos;HYPT&apos;,L2O_Parent_Product_Code__c = &apos;CVSOL&apos;)), 
                    OR(
                        AND(SBQQ__SegmentIndex__c = 2,OR(L2O_Per_Unit_Discount__c &lt;&gt; -2,ISBLANK(L2O_Per_Unit_Discount__c))),
                        AND(SBQQ__SegmentIndex__c = 3,OR(L2O_Per_Unit_Discount__c &lt;&gt; -4,ISBLANK(L2O_Per_Unit_Discount__c))),
                        AND(SBQQ__SegmentIndex__c = 4,OR(L2O_Per_Unit_Discount__c &lt;&gt; -6,ISBLANK(L2O_Per_Unit_Discount__c))),
                        AND(SBQQ__SegmentIndex__c = 5,OR(L2O_Per_Unit_Discount__c &lt;&gt; -8,ISBLANK(L2O_Per_Unit_Discount__c)))
                        )
                )
            ) , 
        TRUE, 
        FALSE
        ), 
    FALSE
    )</formula>
        <label>MDQ Product Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_MDQ_Visit_Fee_Approval__c</fullName>
        <formula>IF(TEXT(L2O_Consult_Type__c)  = &apos;Custom&apos; ,
    IF(OR( 
        AND(SBQQ__SegmentIndex__c = 2, OR(AND(L2O_Fee_Code__c =&apos;NEWPATCF&apos;, L2O_Consult_Fee__c &lt;&gt; 170),AND(L2O_Fee_Code__c =&apos;PRIMCARECF&apos;, L2O_Consult_Fee__c &lt;&gt; 118),AND(L2O_Fee_Code__c =&apos;BHP1T&apos;, L2O_Consult_Fee__c &lt;&gt; 230),AND(L2O_Fee_Code__c =&apos;BHPOT&apos;, L2O_Consult_Fee__c &lt;&gt; 104),AND(L2O_Fee_Code__c =&apos;BHNPT&apos;, L2O_Consult_Fee__c &lt;&gt; 94),AND(L2O_Fee_Code__c =&apos;GMCF&apos;, L2O_Consult_Fee__c &lt;&gt; 57),AND(L2O_Fee_Code__c =&apos;DERMFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 89),AND(L2O_Fee_Code__c =&apos;NUTFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 61),AND(L2O_Fee_Code__c =&apos;EMSCF&apos;, L2O_Consult_Fee__c &lt;&gt; 5200),AND(L2O_Fee_Code__c =&apos;TDBCFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 220))),
        AND(SBQQ__SegmentIndex__c = 3, OR(AND(L2O_Fee_Code__c =&apos;NEWPATCF&apos;, L2O_Consult_Fee__c &lt;&gt; 175),AND(L2O_Fee_Code__c =&apos;PRIMCARECF&apos;, L2O_Consult_Fee__c &lt;&gt; 121),AND(L2O_Fee_Code__c =&apos;BHP1T&apos;, L2O_Consult_Fee__c &lt;&gt; 240),AND(L2O_Fee_Code__c =&apos;BHPOT&apos;, L2O_Consult_Fee__c &lt;&gt; 108),AND(L2O_Fee_Code__c =&apos;BHNPT&apos;, L2O_Consult_Fee__c &lt;&gt; 98),AND(L2O_Fee_Code__c =&apos;GMCF&apos;, L2O_Consult_Fee__c &lt;&gt; 59),AND(L2O_Fee_Code__c =&apos;DERMFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 93),AND(L2O_Fee_Code__c =&apos;NUTFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 63),AND(L2O_Fee_Code__c =&apos;EMSCF&apos;, L2O_Consult_Fee__c &lt;&gt; 5400),AND(L2O_Fee_Code__c =&apos;TDBCFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 230))),
        AND(SBQQ__SegmentIndex__c = 4, OR(AND(L2O_Fee_Code__c =&apos;NEWPATCF&apos;, L2O_Consult_Fee__c &lt;&gt; 180),AND(L2O_Fee_Code__c =&apos;PRIMCARECF&apos;, L2O_Consult_Fee__c &lt;&gt; 124),AND(L2O_Fee_Code__c =&apos;BHP1T&apos;, L2O_Consult_Fee__c &lt;&gt; 250),AND(L2O_Fee_Code__c =&apos;BHPOT&apos;, L2O_Consult_Fee__c &lt;&gt; 112),AND(L2O_Fee_Code__c =&apos;BHNPT&apos;, L2O_Consult_Fee__c &lt;&gt; 102),AND(L2O_Fee_Code__c =&apos;GMCF&apos;, L2O_Consult_Fee__c &lt;&gt; 61),AND(L2O_Fee_Code__c =&apos;DERMFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 97),AND(L2O_Fee_Code__c =&apos;NUTFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 65),AND(L2O_Fee_Code__c =&apos;EMSCF&apos;, L2O_Consult_Fee__c &lt;&gt; 5600),AND(L2O_Fee_Code__c =&apos;TDBCFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 240))),
        AND(SBQQ__SegmentIndex__c = 5, OR(AND(L2O_Fee_Code__c =&apos;NEWPATCF&apos;, L2O_Consult_Fee__c &lt;&gt; 185),AND(L2O_Fee_Code__c =&apos;PRIMCARECF&apos;, L2O_Consult_Fee__c &lt;&gt; 127),AND(L2O_Fee_Code__c =&apos;BHP1T&apos;, L2O_Consult_Fee__c &lt;&gt; 260),AND(L2O_Fee_Code__c =&apos;BHPOT&apos;, L2O_Consult_Fee__c &lt;&gt; 116),AND(L2O_Fee_Code__c =&apos;BHNPT&apos;, L2O_Consult_Fee__c &lt;&gt; 106),AND(L2O_Fee_Code__c =&apos;GMCF&apos;, L2O_Consult_Fee__c &lt;&gt; 63),AND(L2O_Fee_Code__c =&apos;DERMFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 101),AND(L2O_Fee_Code__c =&apos;NUTFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 67),AND(L2O_Fee_Code__c =&apos;EMSCF&apos;, L2O_Consult_Fee__c &lt;&gt; 5800),AND(L2O_Fee_Code__c =&apos;TDBCFEE&apos;, L2O_Consult_Fee__c &lt;&gt; 250)))
        ),
        TRUE,
        FALSE),
    FALSE
    )</formula>
        <label>MDQ Visit Fee Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_MSK_Opportunity__c</fullName>
        <description>For Hinge &amp; Sword Products.</description>
        <label>MSK Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MSK_Opportunity_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Membership_Fee__c</fullName>
        <description>This is the recurring subscription fee</description>
        <formula>IF(NOT(ISBLANK(TEXT(SBQQ__SubscriptionPricing__c))),
IF(ISPICKVAL(L2O_Service_Platform__c,&apos;HHS&apos;), SBQQ__NetPrice__c / SBQQ__ProrateMultiplier__c, SBQQ__ListPrice__c - L2O_Per_Unit_Discount__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The per unit per month price of this Subscription. Formerly known as Membership Fee</inlineHelpText>
        <label>Subscription Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Milestone_Based_Pricing__c</fullName>
        <description>Does this Product have Milestone based pricing?</description>
        <label>Milestone Based Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Monthly_Price__c</fullName>
        <description>Price paid per month for a Product</description>
        <formula>If(ISPICKVAL(L2O_Service_Platform__c,&apos;HHS&apos;),0,SBQQ__EffectiveQuantity__c *  L2O_Membership_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_Bookings_Total_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net ARR Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_Staging__c</fullName>
        <description>Used in roll up summary field on quote</description>
        <label>Net ARR Staging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_With_PG_Bookings_Total_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net ARR With PG Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_With_PG__c</fullName>
        <description>Net ARR based on the Product Performance Guarantee percentage. This value is calculated in the Price rule</description>
        <label>Net ARR With PG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR__c</fullName>
        <description>Used in roll up summary field on quote</description>
        <label>Net ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>